--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,9 @@ body{
 	display: inline-block;
 	width: calc(100% - 80px);
 	vertical-align: middle;
-	color: #c2c2c2;
+	color: #ec5a62;;
 	border: none;
-	background: #F1F1F1;
+	background: transparent;
 
 }
 .ba-search-form > button{
@@ -30,17 +30,18 @@ body{
 	height: 80px;
 	display: inline-block;
 	vertical-align: middle;
-	background: red;
+	background: transparent url('../img/magnifier.svg');
 }
 .ba-column{
 	display: inline-block;
 	padding: 0 20px;
 	width: 30%;
-	text-align: center;
+	text-align: ;
+	vertical-align: top;
 }
 .ba-hugesearch-list{
-	padding: 0;
-	margin: 0;
+	padding: 5px 0 0 10px;
+	margin-top: 40px;
 	list-style: none;
 
 
@@ -48,26 +49,39 @@ body{
 .ba-hugesearch-list a{
 	display: block;
 	padding: 0.75px;
-
 	text-decoration: none;
 	cursor: pointer;
+	margin-bottom: 5px;
 }
 .ba-hugesearch-list li{
-	background: #EBEBEB;
+	background: #e0d5d5;
 	margin-bottom: 2px;
-
 }
 .ba-circle{
 	display: inline-block;
 	width: 50px;
-	margin:0 10px;
+	margin:px;
 	vertical-align: middle;
 	border-radius: 50%;
 }
 .ba-hugesearch-list h3{
 	vertical-align: middle;
+	font-size: 0.85em;
 	display: inline-block;
-	margin: 0;
+	margin: 0 0 0 0;
 	color: rgba(145,145,145,0.7);
-	background: rgba(118,117,128,0.05);
+	width: calc(100% - 90px);
+
+
+}
+.ba-hugesearch-list h3:hover{
+	color:#ec5a62;
+
+}
+.ba-hugesearch-list li:hover{
+	background: #E4E4E5;
+}
+.ba-column h2{
+	color: #C2CBD7;
+	text-align: center;
 }
